更新工具类